--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -10,7 +10,7 @@
 
     </string-array>
 
-    <string-array name="listValues">
+    <string-array name="listValues" translatable="false">
         <item>2</item>
         <item>3</item>
         <item>4</item>
