--- a/app/src/main/res/drawable/button_design.xml
+++ b/app/src/main/res/drawable/button_design.xml
@@ -3,6 +3,8 @@
 >
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
+            <stroke android:width="1dp"
+                android:color="#6464f0"/>
             <solid android:color="#6464f0"/>
             <corners android:radius="4dp"/>
         </shape>
@@ -11,7 +13,7 @@
         <shape android:shape="rectangle">
             <stroke android:width="1dp"
                 android:color="#6464f0"/>
-            <solid android:color="#ffffff"/>
+
             <corners android:radius="4dp"/>
         </shape>>
     </item>>
