--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,13 +1,17 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme.Light" parent="Theme.AppCompat.Light.DarkActionBar">
+
+        <item name="android:background">#00ffffff</item>
+        <item name="android:textColor">#000000</item>
+
+
         <!-- Customize your theme here. -->
     </style>
-
-    <style name="Mega">
-        <item name="android:textSize">70sp</item>
-        <item name="android:textColor">?android:textColorPrimary</item>
+    <style name="AppTheme.Dark" parent="Theme.AppCompat">
+        <item name="android:textColor">#f0f0f0</item>
+        <item name="android:background">#646464</item>
+        <!-- Customize your theme here. -->
     </style>
-
 </resources>
