--- a/app/src/main/res/layout-land/fragment_game.xml
+++ b/app/src/main/res/layout-land/fragment_game.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:baselineAligned="false"
     android:orientation="horizontal"
-    tools:context="org.home.d2e.numbersprinter.GameFragment">
+    tools:context="io.github.d2edev.numbersprinter.GameFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
