--- a/app/src/main/res/layout-land/fragment_rules.xml
+++ b/app/src/main/res/layout-land/fragment_rules.xml
@@ -7,7 +7,7 @@
     android:gravity="center"
     android:orientation="horizontal"
     android:baselineAligned="false"
-    tools:context="org.home.d2e.numbersprinter.RulesFragment">
+    tools:context="io.github.d2edev.numbersprinter.RulesFragment">
 
 
     <LinearLayout
