--- a/app/src/main/res/layout-land/fragment_sign_up.xml
+++ b/app/src/main/res/layout-land/fragment_sign_up.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="org.home.d2e.numbersprinter.SignUpFragment"
+    tools:context="io.github.d2edev.numbersprinter.SignUpFragment"
     android:gravity="center"
     android:baselineAligned="false"
     android:orientation="horizontal">
