--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="org.home.d2e.numbersprinter.GameFragment">
+    tools:context="io.github.d2edev.numbersprinter.GameFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
