--- a/app/src/main/res/layout/fragment_game_over.xml
+++ b/app/src/main/res/layout/fragment_game_over.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context="org.home.d2e.numbersprinter.GameOverFragment">
+    tools:context="io.github.d2edev.numbersprinter.GameOverFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
