--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context="org.home.d2e.numbersprinter.LoginFragment">
+    tools:context="io.github.d2edev.numbersprinter.LoginFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
