--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="org.home.d2e.numbersprinter.StartFragment"
+    tools:context="io.github.d2edev.numbersprinter.StartFragment"
     android:gravity="center"
     android:orientation="vertical"
     android:id="@+id/Fragment_start"
