--- a/app/src/main/res/menu/menu_result_list.xml
+++ b/app/src/main/res/menu/menu_result_list.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="org.home.d2e.numbersprinter.ResultListActivity">
+    tools:context="io.github.d2edev.numbersprinter.ResultListActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
 </menu>
