--- a/app/src/main/res/menu/menu_game_end.xml
+++ b/app/src/main/res/menu/menu_game_end.xml
@@ -4,4 +4,7 @@
     tools:context="io.github.d2edev.numbersprinter.GameEndActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
+    <item android:id="@+id/action_about" android:title="@string/action_about"
+        android:orderInCategory="100" app:showAsAction="never" >
+    </item>>
 </menu>
