--- a/app/src/main/res/layout-land/fragment_game_over.xml
+++ b/app/src/main/res/layout-land/fragment_game_over.xml
@@ -111,7 +111,7 @@
             android:layout_marginRight="20dp" />
 
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:id="@+id/btnNewGame"
             android:text="@string/btnNewGame"
