--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -33,7 +33,9 @@
             android:layout_marginLeft="25dp"
             android:layout_marginRight="25dp"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp" />
+            android:layout_marginBottom="10dp"
+            android:choiceMode="singleChoice"
+            android:listSelector="#0000ff" />
     </LinearLayout>
 
     <LinearLayout
@@ -41,15 +43,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="2">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:id="@+id/tvSelectedPlayer"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:layout_marginTop="10dp" />
 
         <CheckBox
             android:layout_width="wrap_content"
