--- a/app/src/main/res/layout-land/fragment_login.xml
+++ b/app/src/main/res/layout-land/fragment_login.xml
@@ -37,7 +37,10 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_weight="2"
-                android:layout_margin="16dp" />
+                android:layout_margin="16dp"
+                android:choiceMode="singleChoice"
+                android:listSelector="#0000ff"
+                android:longClickable="false" />
         </LinearLayout>
 
         <LinearLayout
@@ -46,15 +49,6 @@
             android:layout_height="match_parent"
             android:layout_weight="3"
             android:gravity="center_vertical">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:id="@+id/tvSelectedPlayer"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:gravity="center" />
 
             <CheckBox
                 android:layout_width="wrap_content"
