--- a/app/src/main/res/layout-land/fragment_sign_up.xml
+++ b/app/src/main/res/layout-land/fragment_sign_up.xml
@@ -53,7 +53,7 @@
             android:layout_marginTop="20dp" />
 
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:text="@string/btnSignup"
             android:id="@+id/btSignup"
