upated list view codes, switching to use memory instead of constatnt db query

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -33,9 +33,7 @@
             android:layout_marginLeft="25dp"
             android:layout_marginRight="25dp"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:choiceMode="singleChoice"
-            android:listSelector="#0000ff" />
+            android:layout_marginBottom="10dp" />
     </LinearLayout>
 
     <LinearLayout
