--- a/app/src/main/res/layout/item_grid_element.xml
+++ b/app/src/main/res/layout/item_grid_element.xml
@@ -13,7 +13,7 @@
         android:id="@+id/tvField"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center"
         android:gravity="center"
+        android:background="@drawable/gamefield_design"
          />
 </LinearLayout>
